--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@sveltejs/kit": "^1.5.0",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/typography": "^0.5.9",
+		"@types/common-tags": "^1.8.1",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
@@ -48,6 +49,9 @@
 	"dependencies": {
 		"@prisma/client": "^4.15.0",
 		"@vercel/postgres": "^0.3.0",
+		"common-tags": "^1.8.2",
+		"openai": "^3.2.1",
+		"sse.js": "^0.6.1",
 		"ts-node": "^10.9.1"
 	}
 }
