--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"@prisma/client": "^4.15.0",
 		"@vercel/postgres": "^0.3.0",
 		"common-tags": "^1.8.2",
+		"gpt3-tokenizer": "^1.1.5",
 		"openai": "^3.2.1",
 		"sse.js": "^0.6.1",
 		"ts-node": "^10.9.1"
