--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
 		"gpt3-tokenizer": "^1.1.5",
 		"openai": "^3.2.1",
 		"sse.js": "^0.6.1",
-		"ts-node": "^10.9.1"
+		"sveltekit-superforms": "^1.0.0",
+		"ts-node": "^10.9.1",
+		"zod": "^3.21.4"
 	}
 }
